@@ -47,6 +47,7 @@ sub check_major {
     }
 
     # turn logging_collector on, csvlog
+    my $pg_log = $v >= 10 ? 'log' : 'pg_log'; # log directory in PGDATA changed in PG 10
     SKIP: {
         skip "No logging collector in 8.2", 30 if ($v <= 8.2);
     is_program_out 0, "pg_conftool $v main set logging_collector on", 0, "", "set logging_collector on";
@@ -54,23 +55,23 @@ sub check_major {
     is_program_out 0, "pg_ctlcluster $v main restart", 0, "", "$v main restart";
     is_program_out 'postgres', "psql -Atc \"show logging_collector\"", 0, "on\n", 'logging_collector is on';
     is_program_out 'postgres', "psql -Atc \"show log_destination\"", 0, "csvlog\n", 'log_destination is csvlog';
-    check_logging qr($v main 5432 online postgres $pgdata pg_log/.*\.csv), "pg_lscluster reports csvlog";
+    check_logging qr($v main 5432 online postgres $pgdata $pg_log/.*\.csv), "pg_lscluster reports csvlog";
     like_program_out 'postgres', "psql -qc \"barbaz$$\"", 1, qr/syntax error.*barbaz$$/, 'log an error';
-    like_program_out 'postgres', "grep --binary-files=text barbaz$$ $pgdata/pg_log/*.csv", 0, qr/syntax error.*barbaz$$/, 'error appears in pg_log/*.csv';
+    like_program_out 'postgres', "grep --binary-files=text barbaz$$ $pgdata/$pg_log/*.csv", 0, qr/syntax error.*barbaz$$/, "error appears in $pg_log/*.csv";
 
     # stderr,syslog,csvlog
     is_program_out 0, "pg_conftool $v main set log_destination stderr,syslog,csvlog", 0, "", "set log_destination stderr,syslog,csvlog";
     is_program_out 0, "pg_ctlcluster $v main reload", 0, "", "$v main reload";
     is_program_out 'postgres', "psql -Atc \"show log_destination\"", 0, "stderr,syslog,csvlog\n", 'log_destination is stderr,syslog,csvlog';
-    check_logging qr($v main 5432 online postgres $pgdata pg_log/.*\.log,syslog,pg_log/.*\.csv), "pg_lscluster reports stderr,syslog,csvlog";
+    check_logging qr($v main 5432 online postgres $pgdata $pg_log/.*\.log,syslog,$pg_log/.*\.csv), "pg_lscluster reports stderr,syslog,csvlog";
     like_program_out 'postgres', "psql -qc \"moo$$\"", 1, qr/syntax error.*moo$$/, 'log an error';
-    like_program_out 'postgres', "grep --binary-files=text moo$$ $pgdata/pg_log/*.log", 0, qr/syntax error.*moo$$/, 'error appears in pg_log/*.log';
+    like_program_out 'postgres', "grep --binary-files=text moo$$ $pgdata/$pg_log/*.log", 0, qr/syntax error.*moo$$/, "error appears in $pg_log/*.log";
     SKIP: {
         skip "/var/log/syslog not available", 2 unless ($syslog_works);
         usleep $delay;
         like_program_out 0, "grep --binary-files=text 'postgres.*moo$$' /var/log/syslog", 0, qr/moo$$/, 'error appears in /var/log/syslog';
     }
-    like_program_out 'postgres', "grep --binary-files=text moo$$ $pgdata/pg_log/*.csv", 0, qr/syntax error.*moo$$/, 'error appears in pg_log/*.csv';
+    like_program_out 'postgres', "grep --binary-files=text moo$$ $pgdata/$pg_log/*.csv", 0, qr/syntax error.*moo$$/, "error appears in $pg_log/*.csv";
     }
 
     # stop server, clean up, check for leftovers
